--- a/docker/services/nova-api.yaml
+++ b/docker/services/nova-api.yaml
@@ -145,3 +145,7 @@ outputs:
               - '/usr/bin/nova-manage'
               - 'cell_v2'
               - 'discover_hosts'
+      upgrade_tasks:
+        - name: Stop and disable nova_api service
+          tags: step2
+          service: name=openstack-nova-api state=stopped enabled=no
