--- a/docker/services/nova-placement.yaml
+++ b/docker/services/nova-placement.yaml
@@ -70,6 +70,12 @@ outputs:
              owner: root
              perm: '0644'
              source: /var/lib/kolla/config_files/src/etc/httpd/conf.d/10-placement_wsgi.conf
+           # puppet generates a stubbed out version of the stock one so we
+           # copy it in to overwrite the existing one
+           - dest: /etc/httpd/conf.d/00-nova-placement-api.conf
+             owner: root
+             perm: '0644'
+             source: /var/lib/kolla/config_files/src/etc/httpd/conf.d/00-nova-placement-api.conf
            - dest: /etc/httpd/conf/httpd.conf
              owner: root
              perm: '0644'
