Enable IronicPxe in the undercloud
This enables the IronicPxe services which are split out
into separate templates for the containerized undercloud.

Change-Id: I0ec3cefec9b47ef3c59de6972541ef9b560aacb7

--- a/roles_data_undercloud.yaml
+++ b/roles_data_undercloud.yaml
@@ -26,6 +26,7 @@
     - OS::TripleO::Services::MistralExecutor
     - OS::TripleO::Services::IronicApi
     - OS::TripleO::Services::IronicConductor
+    - OS::TripleO::Services::IronicPxe
     - OS::TripleO::Services::NovaIronic
     - OS::TripleO::Services::Zaqar
     - OS::TripleO::Services::NeutronServer
