--- a/puppet/services/panko-api.yaml
+++ b/puppet/services/panko-api.yaml
@@ -87,7 +87,7 @@ outputs:
       upgrade_tasks:
         - name: Check if httpd is deployed
           command: systemctl is-enabled httpd
-          tags: step0,validation
+          tags: common
           ignore_errors: True
           register: httpd_enabled
         - name: "PreUpgrade step0,validation: Check if httpd is running"
@@ -99,3 +99,7 @@ outputs:
         - name: Stop panko-api service (running under httpd)
           tags: step1
           service: name=httpd state=stopped
+          when: httpd_enabled.rc == 0
+        - name: Install openstack-panko-api package if it was not installed
+          tags: step3
+          yum: name=openstack-panko-api state=latest
