etcd: Get FQDN from hiera instead of puppet fact
The puppet facts will be removed soon and using the hiera value is
adviced instead.

Change-Id: I318f81abaac997370e950780993dc95cae088327

--- a/puppet/services/etcd.yaml
+++ b/puppet/services/etcd.yaml
@@ -36,7 +36,7 @@ outputs:
         etcd::etcd_name:
           str_replace:
             template:
-              '"%{::fqdn_$NETWORK}"'
+              "%{hiera('fqdn_$NETWORK')}"
             params:
               $NETWORK: {get_param: [ServiceNetMap, EtcdNetwork]}
         # NOTE: bind IP is found in Heat replacing the network name with the local node IP
