Update properties being set for octavia rabbit properties
A change to puppet-tripleo (Iea5607dbb3ee6b1dd50acc1395de52dc920aa915)
altered altered which hieradata was consumed for octavia. This updates
the heat templates to sync with that change.

Change-Id: I572dd4c25f25ab2ea8b10cabfa4773fae2a2bc91
Closes-Bug: #1670058

--- a/puppet/services/octavia-base.yaml
+++ b/puppet/services/octavia-base.yaml
@@ -56,7 +56,7 @@ outputs:
          octavia::debug: {get_param: Debug}
          octavia::purge_config: {get_param: EnableConfigPurge}
          octavia::rabbit_use_ssl: {get_param: RabbitClientUseSSL}
-         tripleo::profile::base::octavia::rabbit_user: {get_param: RabbitUserName}
-         tripleo::profile::base::octavia::rabbit_password: {get_param: RabbitPassword}
-         tripleo::profile::base::octavia::rabbit_port: {get_param: RabbitClientPort}
+         octavia::rabbit_userid: {get_param: RabbitUserName}
+         octavia::rabbit_password: {get_param: RabbitPassword}
+         octavia::rabbit_port: {get_param: RabbitClientPort}
 
