Add upgrade tasks for heat over httpd
Change-Id: Ia7b8c41d4d8135f58661a74a4298f60abb251fbe

--- a/puppet/services/heat-api-cfn.yaml
+++ b/puppet/services/heat-api-cfn.yaml
@@ -122,7 +122,16 @@ outputs:
           shell: /usr/bin/systemctl show 'openstack-heat-api-cfn' --property ActiveState | grep '\bactive\b'
           when: heat_api_cfn_enabled.rc == 0
           tags: step0,validation
-        - name: Stop heat_api_cfn service
+        - name: check for heat_api_cfn running under apache (post upgrade)
           tags: step1
-          when: heat_api_cfn_enabled.rc == 0
-          service: name=openstack-heat-api-cfn state=stopped
+          shell: "httpd -t -D DUMP_VHOSTS | grep -q heat_api_cfn_wsgi"
+          register: heat_api_cfn_apache
+          ignore_errors: true
+        - name: Stop heat_api_cfn service (running under httpd)
+          tags: step1
+          service: name=httpd state=stopped
+          when: "heat_api_cfn_apache.rc == 0"
+        - name: Stop and disable heat_api_cfn service (pre-upgrade not under httpd)
+          tags: step1
+          when: heat_api_cfn_apache.rc == 0
+          service: name=openstack-heat-api-cfn state=stopped enabled=no
