--- a/puppet/services/heat-api-cloudwatch.yaml
+++ b/puppet/services/heat-api-cloudwatch.yaml
@@ -106,7 +106,16 @@ outputs:
           shell: /usr/bin/systemctl show 'openstack-heat-api-cloudwatch' --property ActiveState | grep '\bactive\b'
           when: heat_api_cloudwatch_enabled.rc == 0
           tags: step0,validation
-        - name: Stop heat_api_cloudwatch service
+        - name: check for heat_api_cloudwatch running under apache (post upgrade)
+          tags: step1
+          shell: "httpd -t -D DUMP_VHOSTS | grep -q heat_api_cloudwatch_wsgi"
+          register: heat_api_cloudwatch_apache
+          ignore_errors: true
+        - name: Stop heat_api_cloudwatch service (running under httpd)
+          tags: step1
+          service: name=httpd state=stopped
+          when: "heat_api_cloudwatch_apache.rc == 0"
+        - name: Stop and disable heat_api_cloudwatch service (pre-upgrade not under httpd)
           tags: step1
           when: heat_api_cloudwatch_enabled.rc == 0
-          service: name=openstack-heat-api-cloudwatch state=stopped
+          service: name=openstack-heat-api-cloudwatch state=stopped enabled=no
