--- a/puppet/services/heat-api.yaml
+++ b/puppet/services/heat-api.yaml
@@ -122,7 +122,16 @@ outputs:
           shell: /usr/bin/systemctl show 'openstack-heat-api' --property ActiveState | grep '\bactive\b'
           when: heat_api_enabled.rc == 0
           tags: step0,validation
-        - name: Stop heat_api service
+        - name: check for heat_api running under apache (post upgrade)
+          tags: step1
+          shell: "httpd -t -D DUMP_VHOSTS | grep -q heat_api_wsgi"
+          register: heat_api_apache
+          ignore_errors: true
+        - name: Stop heat_api service (running under httpd)
+          tags: step1
+          service: name=httpd state=stopped
+          when: "heat_api_apache.rc == 0"
+        - name: Stop and disable heat_api service (pre-upgrade not under httpd)
           tags: step1
           when: heat_api_enabled.rc == 0
-          service: name=openstack-heat-api state=stopped
+          service: name=openstack-heat-api state=stopped enabled=no
